# Virtual_Assist

./: .gitignore  README.md  arena_data_de.jsonl  create_vectordb.ipynb  create_vectorstore_en.py  image_gen.py  main.py  pyproject.toml  scrape_arena_de.py  suggestions_db.py
frontend/: index.html  script.js  styles.css
